[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easycheck-manager"
version = "1.0.0"
description = "轻松夜答"
license = { text = "MIT" }
authors = [{ name = "Ntzy123"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "selenium",
    'pywin32; platform_system == "Windows"',
]

[project.optional-dependencies]
build = ["pyinstaller"]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
easycheck-manager = "easycheck_manager.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
norecursedirs = [
    ".venv",
    "venv",
    "dist",
    "build",
]
